--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,6 @@
 <section class="projects-section">
   <div class="ellipse ellipse1"></div>
   <div class="ellipse ellipse2"></div>
-  <div class="ellipse ellipse3"></div>
   <div class="ellipse ellipse4"></div>
   <div class="ellipse ellipse5"></div>
 
@@ -22,7 +21,7 @@
         <div class="project-description">
           <h3 class="project-title">{{ project.title }}</h3>
           <div class="technologies-list">
-            {{ project.technologies.join(' | ') }}
+            {{ project.technologies.join(" | ") }}
           </div>
           <p class="description-text">{{ project.description }}</p>
           <div class="project-links">
