editing hero section background

--- a/src/app/hero-section/hero-section.component.scss
+++ b/src/app/hero-section/hero-section.component.scss
@@ -6,6 +6,7 @@
 }
 
 .hero-section {
+  background: linear-gradient(179.99deg, #FFFFFF 12.89%, #EAF0FF 91.39%);
   position: relative;
   overflow: hidden;
 }
