--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -10,7 +10,7 @@
 .contact-section {
   width: 100%;
   padding: 80px 0 80px 0;
-  background-color: var(--surface-light);
+  background: linear-gradient(179.99deg, #ffffff 12.89%, #eaf0ff 91.39%);
 }
 
 .contact-content {
